<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_random" />

        <RadioButton
            android:id="@+id/radioCornerCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_empty" />

        <RadioButton
            android:id="@+id/radioNormalCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_normal" />

    </RadioGroup>

    <TextView
        android:id="@+id/textStaticInputTitle"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        android:text="@string/static_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


    <TextView
        android:id="@+id/textInput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"


        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        android:text=""
        tools:text="InputText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="120dp"
        android:layout_height="40dp"

        android:text="@string/button_calculate"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.7"

        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textStaticResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/static_result"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="20dp"

        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"

        android:text=""
        android:textColor="@color/cardview_dark_background"
        tools:text="ResultText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>